// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should render properly 1`] = `
RenderContext {
  "0": VNode {
    "attributes": undefined,
    "children": Array [
      VNode {
        "attributes": Object {
          "checked": false,
          "handleChange": [MockFunction],
          "key": "s-0-hey",
          "text": "默认用法",
          "value": "hey",
        },
        "children": Array [
          "默认用法",
        ],
        "key": "s-0-hey",
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "checked": true,
          "checkedColor": "#e27777",
          "handleChange": [MockFunction],
          "key": "s-1-hi",
          "text": "自定义颜色",
          "value": "hi",
        },
        "children": Array [
          "自定义颜色",
        ],
        "key": "s-1-hi",
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "checked": false,
          "disabled": true,
          "handleChange": [MockFunction],
          "key": "s-2-holla",
          "text": "开启禁用",
          "value": "holla",
        },
        "children": Array [
          "开启禁用",
        ],
        "key": "s-2-holla",
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "checked": false,
          "handleChange": [MockFunction],
          "icons": Object {
            "actived": "more",
          },
          "key": "s-3-bonjour",
          "text": "自定义激活图标",
          "value": "bonjour",
        },
        "children": Array [
          "自定义激活图标",
        ],
        "key": "s-3-bonjour",
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "checked": false,
          "disabled": true,
          "handleChange": [MockFunction],
          "key": "s-4-conba",
          "text": "开启禁用",
          "value": "conba",
        },
        "children": Array [
          "开启禁用",
        ],
        "key": "s-4-conba",
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "checked": false,
          "handleChange": [MockFunction],
          "icons": Object {
            "actived": "https://image.flaticon.com/icons/png/128/2026/2026462.png",
            "inactive": "https://image.flaticon.com/icons/png/128/2026/2026450.png",
          },
          "key": "s-5-hello",
          "text": "自定义激活及未激活图标",
          "value": "hello",
        },
        "children": Array [
          "自定义激活及未激活图标",
        ],
        "key": "s-5-hello",
        "nodeName": [Function],
      },
    ],
    "key": undefined,
    "nodeName": "div",
  },
  "length": 1,
}
`;

exports[`Checkbox should render properly 2`] = `
RenderContext {
  "0": VNode {
    "attributes": undefined,
    "children": Array [
      VNode {
        "attributes": Object {
          "checked": false,
          "handleChange": [MockFunction] {
            "calls": Array [
              Array [
                "hello",
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          },
          "key": "s-0-hey",
          "text": "默认用法",
          "value": "hey",
        },
        "children": Array [
          "默认用法",
        ],
        "key": "s-0-hey",
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "checked": false,
          "checkedColor": "#e27777",
          "handleChange": [MockFunction] {
            "calls": Array [
              Array [
                "hello",
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          },
          "key": "s-1-hi",
          "text": "自定义颜色",
          "value": "hi",
        },
        "children": Array [
          "自定义颜色",
        ],
        "key": "s-1-hi",
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "checked": false,
          "disabled": true,
          "handleChange": [MockFunction] {
            "calls": Array [
              Array [
                "hello",
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          },
          "key": "s-2-holla",
          "text": "开启禁用",
          "value": "holla",
        },
        "children": Array [
          "开启禁用",
        ],
        "key": "s-2-holla",
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "checked": true,
          "handleChange": [MockFunction] {
            "calls": Array [
              Array [
                "hello",
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          },
          "icons": Object {
            "actived": "more",
          },
          "key": "s-3-bonjour",
          "text": "自定义激活图标",
          "value": "bonjour",
        },
        "children": Array [
          "自定义激活图标",
        ],
        "key": "s-3-bonjour",
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "checked": false,
          "disabled": true,
          "handleChange": [MockFunction] {
            "calls": Array [
              Array [
                "hello",
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          },
          "key": "s-4-conba",
          "text": "开启禁用",
          "value": "conba",
        },
        "children": Array [
          "开启禁用",
        ],
        "key": "s-4-conba",
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "checked": false,
          "handleChange": [MockFunction] {
            "calls": Array [
              Array [
                "hello",
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          },
          "icons": Object {
            "actived": "https://image.flaticon.com/icons/png/128/2026/2026462.png",
            "inactive": "https://image.flaticon.com/icons/png/128/2026/2026450.png",
          },
          "key": "s-5-hello",
          "text": "自定义激活及未激活图标",
          "value": "hello",
        },
        "children": Array [
          "自定义激活及未激活图标",
        ],
        "key": "s-5-hello",
        "nodeName": [Function],
      },
    ],
    "key": undefined,
    "nodeName": "div",
  },
  "length": 1,
}
`;
